[tool.poetry]
name = "yet-another-asteroid-game"
version = "0.1.0"
description = "Asteroid game using pygame"
authors = ["Mario H. Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
